Mise à jour des titres de la page docs/_posts/2024-10-19-LiquidJs.md.

--- a/docs/_posts/2024-10-19-LiquidJs.md
+++ b/docs/_posts/2024-10-19-LiquidJs.md
@@ -20,7 +20,7 @@ La syntaxe LiquidJS est relativement simple. Il existe 2 types de balises dans L
 
 > **Live Demo** : Before going into the details, here’s a live demo to play around: https://liquidjs.com/playground.html.
 
-### Outputs
+#### Outputs
 
 Les « Outputs » sont utilisées pour générer des variables, qui peuvent être transformées par des filtres, en HTML. Le modèle suivant insérera la valeur de `username` dans la valeur de l'entrée :
 
@@ -40,7 +40,7 @@ Les filtres peuvent être chaînés :
 
 Une liste complète des filtres pris en charge par LiquidJS peut être trouvée [ici](https://liquidjs.com/filters/overview.html){:target="_blank"}.
 
-### Tags
+#### Tags
 
 Les `Tags` sont utilisées pour contrôler le processus de rendu du modèle, la manipulation des variables du modèle, l'interopérabilité avec d'autres modèles, etc. Par exemple, `assign` peut être utilisé pour définir une variable qui peut être utilisée ultérieurement dans le modèle :
 
@@ -62,7 +62,7 @@ Généralement, les balises apparaissent par paires avec une balise de début et
 Une liste complète des balises prises en charge par LiquidJS peut être trouvée [ici](https://liquidjs.com/tags/overview.html){:target="_blank"}.
 
 ## Setup
-### LiquidJS in Node.js
+#### LiquidJS in Node.js
 
 Installer via npm :
 ``` bash
@@ -90,7 +90,7 @@ engine
 
 > **Démo de travail** : Voici une démo fonctionnelle pour l'utilisation de LiquidJS dans TypeScript : [liquidjs/demo/typescript/}(https://github.com/harttle/liquidjs/blob/master/demo/typescript/){:target="_blank"}
 
-### LiquidJS in Browsers
+#### LiquidJS in Browsers
 
 Des bundles UMD prédéfinis sont également disponibles :
 
@@ -103,7 +103,7 @@ Des bundles UMD prédéfinis sont également disponibles :
 
 > **Démo de travail** : Voici une démo vivante sur jsFiddle: [jsfiddle.net/pd4jhzLs/1/](https://jsfiddle.net/pd4jhzLs/1/){:target="_blank"}, et le code source est également disponible en [liquidjs/demo/browser/](https://github.com/harttle/liquidjs/blob/master/demo/browser/){:target="_blank"}.
 
-### LiquidJS in CLI
+#### LiquidJS in CLI
 
 LiquidJS peut également être utilisé pour restituer un modèle directement depuis la CLI en utilisant `npx` :
 
@@ -162,7 +162,7 @@ const engine = new Liquid({
 
 > **API Document** : Voici un aperçu de toutes les options. Pour les types et signatures exacts, veuillez vous référer à [LiquidOptions API](https://liquidjs.com/api/interfaces/LiquidOptions.html){:target="_blank"}.
 
-### Cache
+#### Cache
 
 Le `cache` est utilisé pour améliorer les performances en mettant en cache les structures de modèles précédemment analysées, en particulier dans les cas où nous analysons ou restituons des fichiers à plusieurs reprises.
 
@@ -170,7 +170,7 @@ La valeur par défaut est `false`. Lorsque la valeur est `true`, un cache LRU pa
 
 De plus, il peut également s'agir d'une implémentation de cache personnalisée. Voir [Mise en cache](https://liquidjs.com/tutorials/caching.html){:target="_blank"} pour plus de détails.
 
-### Partials/Layouts
+#### Partials/Layouts
 
 **root** est utilisé pour spécifier les répertoires de modèles permettant à LiquidJS de rechercher et de lire les fichiers de modèles. Peut être une chaîne unique ou un tableau de chaînes. Voir [Render Files](https://liquidjs.com/tutorials/render-file.html){:target="_blank"} pour plus de détails.
 
@@ -180,7 +180,7 @@ De plus, il peut également s'agir d'une implémentation de cache personnalisée
 
 **relativeReference** est défini sur `true` par défaut pour autoriser les noms de fichiers relatifs. Notez que les fichiers relativement référencés doivent également se trouver dans la racine correspondante. Par exemple, vous pouvez référencer un autre fichier comme `{% raw %}{%{% endraw %} render ../foo/bar {% raw %}%}{% endraw %}` tant que `../foo/bar` se trouve également dans le répertoire `partials`.
 
-### dynamicPartials
+#### dynamicPartials
 
 > **Note** : pour des raisons historiques, il s'appelle DynamicPartials mais il fonctionne également pour les mises en page.
 
@@ -197,7 +197,7 @@ En définissant `dynamicPartials: false`, LiquidJS essaiera d'inclure le fichier
 ```
 > **Piège courant** : LiquidJS définit par défaut cette option sur `true` pour être compatible avec shopify/liquid, mais si vous venez de [eleventy](https://github.com/11ty/eleventy){:target="_blank"}, elle est définie sur `false` par défaut (voir [Quoted Include Paths](https://www.11ty.dev/docs/languages/liquid/#quoted-include-paths){:target="_blank"}) qui, je crois, essaie d'être compatible avec Jekyll.
 
-### Jekyll include
+#### Jekyll include
 
 [jekyllInclude](https://liquidjs.com/api/interfaces/LiquidOptions.html#jekyllInclude){:target="_blank"} est utilisé pour activer la syntaxe d'inclusion de type Jekyll-like. La valeur par défaut est `false`, lorsqu'elle est définie sur `true` :
 
@@ -218,7 +218,7 @@ Par exemple, dans le modèle suivant, `name.html` n'est pas cité, `header` et `
 </article>
 ```
 
-### extname
+#### extname
 
 `extname` définit le nom d'extension par défaut à ajouter aux noms de fichiers si le nom de fichier n'a pas de nom d'extension. La valeur par défaut est `''`, ce qui signifie qu'il est désactivé par défaut. En le réglant sur `.liquid` :
 
@@ -229,21 +229,21 @@ Par exemple, dans le modèle suivant, `name.html` n'est pas cité, `header` et `
 
 > **Legacy Versions** : Avant la version 2.0.1, `extname est défini par défaut sur `.liquid`. Pour changer cela, vous devez définir explicitement `extname: ''`. Voir [#41](https://github.com/harttle/liquidjs/issues/41){:target="_blank"} pour plus de détails.
 
-### fs
+#### fs
 
 **fs** est utilisé pour définir une implémentation de système de fichiers personnalisée qui sera utilisée par LiquidJS pour rechercher et lire les fichiers modèles. Voir [Abstract File System](https://liquidjs.com/tutorials/render-file.html#Abstract-File-System){:target="_blank"} pour plus de détails.
 
-### globals
+#### globals
 
 **globals** est utilisé pour définir des variables globales disponibles pour tous les modèles, même en cas de [render tag](https://liquidjs.com/tags/render.html){:target="_blank"}. Voir [3185](https://github.com/harttle/liquidjs/issues/185){:target="_blank"} pour plus de détails.
 
-### jsTruthy
+#### jsTruthy
 
 **jsTruthy** est utilisé pour utiliser la véracité JavaScript standard plutôt que Shopify.
 
 la valeur par défaut est `false`. Par exemple, lorsqu'elle est définie sur `true`, une chaîne vide sera évaluée comme `false` avec `jsTruthy`. Avec la véracité de Shopify, une chaîne vide est `true`.
 
-### outputEscape
+#### outputEscape
 
 [outputEscape](https://liquidjs.com/api/interfaces/LiquidOptions.html#outputEscape){:target="_blank"} peut être utilisé pour échapper automatiquement les chaînes de sortie. Il peut s'agir de `"escape"`, `"json"` ou `(val: inconnu) => string`, la valeur par défaut est `undefined`.
 
@@ -251,7 +251,7 @@ la valeur par défaut est `false`. Par exemple, lorsqu'elle est définie sur `tr
 - `"json"` est utile lorsque vous utilisez LiquidJS pour créer des fichiers JSON valides.
 - Il peut même s'agir d'une fonction qui vous permet de contrôler quelles variables sont sorties dans LiquidJS. Veuillez noter que l'entrée peut être de n'importe quel type autre qu'une chaîne, par ex. un filtre a renvoyé une valeur non-chaîne.
 
-### Date
+#### Date
 
 **timezoneOffset** est utilisé pour spécifier un fuseau horaire différent pour afficher les dates, votre fuseau horaire local sera utilisé s'il n'est pas spécifié. Par exemple, définir `timezoneOffset: 0` pour afficher toutes les dates en UTC/GMT 00:00.
 
@@ -259,11 +259,11 @@ la valeur par défaut est `false`. Par exemple, lorsqu'elle est définie sur `tr
 
 **dateFormat** est utilisé pour spécifier un format par défaut pour les dates de sortie. `%A, %B %-e, %Y at %-l:%M %P %z` sera utilisé s’il n’est pas spécifié. Par exemple, définissez `dateFormat: %Y-%m-%dT%H:%M:%S:%LZ` pour afficher toutes les dates dans le format [JavaScript Date.toJson()](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date/toJSON){:target="_blank"}.
 
-### Trimming
+#### Trimming
 
 Les options **greedy**, **trimOutputLeft**, **trimOutputRight**, **trimTagLeft**, **trimTagRight** sont utilisées pour éliminer les nouvelles lignes et les retraits supplémentaires dans les modèles autour des constructions liquides. Voir [Whitespace Control](https://liquidjs.com/tutorials/whitespace-control.html){:target="_blank"} pour plus de détails.
 
-### Delimiter
+#### Delimiter
 
 **outputDelimiterLeft**, **outputDelimiterRight**, **tagDelimiterLeft**, **tagDelimiterRight** sont utilisés pour personnaliser les délimiteurs pour LiquidJS [Tags and Filters](https://liquidjs.com/tutorials/intro-to-liquid.html){:target="_blank"}. Par exemple avec `outputDelimiterLeft : <%=, outputDelimiterRight : %>` nous pouvons éviter les conflits avec d'autres langages :
 
@@ -271,7 +271,7 @@ Les options **greedy**, **trimOutputLeft**, **trimOutputRight**, **trimTagLeft**
 <%= username | append: ", welcome to LiquidJS!" %>
 ```
 
-### Strict
+#### Strict
 
 **strictFilters** est utilisé pour affirmer l'existence du filtre. S'il est défini sur `false`, les filtres non définis seront ignorés. Sinon, les filtres non définis provoqueront une exception d'analyse. La valeur par défaut est `false`.
 
@@ -283,7 +283,7 @@ Les options **greedy**, **trimOutputLeft**, **trimOutputRight**, **trimTagLeft**
 
 > **Nonexistent Tags** : Les balises inexistantes génèrent toujours des erreurs lors de l'analyse et ce comportement ne peut pas être personnalisé.
 
-### Parameter Order
+#### Parameter Order
 
 Les ordres de paramètres sont ignorés par défaut, car ea `{% raw %}{%{% endraw %} for i in (1..8) reversed limit:3 {% raw %}%}{% endraw %}` exécutera toujours la `limit` avant `reversed`, même si `reversed` se produit avant la `limit`. Pour que l'ordre des paramètres soit respecté, définissez **orderedFilterParameters** sur `true`. Sa valeur par défaut est `false`.
 
@@ -291,7 +291,7 @@ Les ordres de paramètres sont ignorés par défaut, car ea `{% raw %}{%{% endra
 
 Pour un projet typique, il peut y avoir un répertoire de fichiers modèles, vous devrez définir le [template root](https://liquidjs.com/api/interfaces/LiquidOptions.html#root){:target="_blank"} et appeler [renderFile](https://liquidjs.com/api/classes/Liquid.html#renderFile){:target="_blank"} ou [renderFileSync](https://liquidjs.com/api/classes/Liquid.html#renderFileSync){:target="_blank"} pour restituer un fichier spécifique.
 
-### Render a File
+#### Render a File
 
 Par exemple, vous disposez d'un répertoire de modèles comme celui-ci :
 
@@ -324,7 +324,7 @@ Exécutez `node index.js` et vous obtiendrez un résultat comme ceci :
 name: alice
 ```
 
-### Template Lookup
+#### Template Lookup
 
 Noms des fichiers modèles transmis aux balises API [renderFile](https://liquidjs.com/api/classes/Liquid.html#renderFile){:target="_blank"}, [parseFile](https://liquidjs.com/api/classes/Liquid.html#parseFile){:target="_blank"}, [renderFileSync](https://liquidjs.com/api/classes/Liquid.html#renderFileSync){:target="_blank"}, [parseFileSync](https://liquidjs.com/api/classes/Liquid.html#parseFileSync){:target="_blank"}, et [include](https://help.shopify.com/themes/liquid/tags/theme-tags#include){:target="_blank"}, [layout](https://help.shopify.com/en/themes/liquid/tags/theme-tags#layout){:target="_blank"} sont résolues par rapport à [the root option](https://liquidjs.com/api/interfaces/LiquidOptions.html#root){:target="_blank"}.
 
@@ -353,7 +353,7 @@ Lorsque LiquidJS est utilisé dans le navigateur, disons que l'emplacement actue
 Si la récupération échoue, une erreur 404/500 ou des pannes de réseau par exemple, une erreur `ENOENT` sera générée.
 Voici une démo pour les navigateurs : [demo/browser](https://github.com/harttle/liquidjs/tree/master/demo/browser){:target="_blank"}.
 
-### Abstract File System
+#### Abstract File System
 
 LiquidJS définit une [interface de système de fichiers abstraite](https://liquidjs.com/api/interfaces/FS.html){:target="_blank"} et l'implémentation par défaut est [src/fs/fs-impl.ts](https://github.com/harttle/liquidjs/blob/master/src/fs/fs-impl.ts){:target="_blank"} pour Node.js et [src/build/fs-impl-browser.ts](https://github.com/harttle/liquidjs/blob/master/src/fs/fs-impl-browser.ts){:target="_blank"} pour le bundle de navigateur.
 
@@ -387,7 +387,7 @@ var engine = new Liquid({
 
 > **Vulnérabilité de traversée de chemin** : La valeur par défaut de `contain()` renvoie toujours true. Cela signifie que lorsque vous spécifiez un système de fichiers abstrait, vous devrez fournir un `contain()` approprié pour éviter d'exposer de telles vulnérabilités.
 
-### In-memory Template
+#### In-memory Template
 
 Pour faciliter le rendu sans fichiers, il existe une option de `templates` permettant de spécifier un mappage des noms de fichiers et de leur contenu. LiquidJS lira les modèles du mappage.
 
@@ -405,7 +405,7 @@ engine.renderFileSync('views/entry'))
 Notez que les options du système de fichiers telles que `root`, `layouts`, `partials`, `relativeReference` seront ignorées lorsque les `templates` sont spécifiés.
 
 ## Partials and Layouts
-### Render Partials
+#### Render Partials
 
 Pour les fichiers modèles suivants :
 
@@ -431,7 +431,7 @@ Pour plus de détails, veuillez vous référer à la balise [render](https://liq
 
 > **L'extension ".liquid"** : L'extension « .liquid » dans le `layout`, `render` et`include` peut être omise si l'instance Liquid est créée à l'aide de l'option extname : « .liquid ». Voir [ the extname option ](https://liquidjs.com/tutorials/options.html#extname){:target="_blank"} pour plus de détails.
 
-### Layout Templates (Extends)
+#### Layout Templates (Extends)
 
 Pour les fichiers modèles suivants :
 
@@ -472,7 +472,7 @@ app.set('view engine', 'liquid');       // set liquid to default
 
 > **Démo de travail** : Voici une démo fonctionnelle pour l'utilisation de LiquidJS dans Express.js : [liquidjs/demo/express/](https://github.com/harttle/liquidjs/blob/master/demo/express/){:target="_blank"}.
 
-### Template Lookup
+#### Template Lookup
 
 L'option [root](https://liquidjs.com/api/interfaces/LiquidOptions.html#root) continuera à fonctionner en tant que racine des modèles, comme vous pouvez le voir dans [Render A Template File](https://liquidjs.com/tutorials/render-a-file.html){:target="_blank"}. De plus, l'option [`views`](https://expressjs.com/en/guide/using-template-engines.html){:target="_blank"} dans express.js (comme indiqué ci-dessus) sera également respectée. Supposons que vous ayez un répertoire de modèles tel que :
 
@@ -504,7 +504,7 @@ res.render('hello')
 res.render('world')
 ```
 
-### Caching
+#### Caching
 
 Définir simplement l'[cache option](https://liquidjs.com/api/interfaces/LiquidOptions.html#cache){:target="_blank"} sur true activera la mise en cache des modèles, comme expliqué dans [Caching](https://liquidjs.com/tutorials/caching.html){:target="_blank"}. Il est recommandé d'activer le cache dans l'environnement de production, ce qui peut être fait en :
 
@@ -521,7 +521,7 @@ Dans un projet de site Web typique, nous aurons un répertoire de modèles de vu
 
 LiquidJS propose plusieurs façons de mettre en cache les modèles analysés pour améliorer les performances.
 
-### Programmatically
+#### Programmatically
 
 Les API [.parse()](https://liquidjs.com/api/classes/Liquid.html#parse){:target="_blank"}, [.parseFile()](https://liquidjs.com/api/classes/Liquid.html#parseFile){:target="_blank"}, [.parseFileSync()](https://liquidjs.com/api/classes/Liquid.html#parseFileSync){:target="_blank"} sont utilisées pour analyser des modèles à partir d'une chaîne ou de fichiers. Le modèle de résultat peut ensuite être rendu plusieurs fois avec un contexte différent.
 
@@ -545,7 +545,7 @@ engine.renderSync(tpl, {name: 'bob'}) // 'Bob'
 
 La chaîne/le fichier du modèle n'est analysé qu'une seule fois et restitué plusieurs fois en utilisant un contexte différent. Les modèles de différents fichiers peuvent être stockés dans une `Map` et peuvent être récupérés directement pour les rendus ultérieurs.
 
-### The cache Option
+#### The cache Option
 
 Le [cache option](https://liquidjs.com/api/interfaces/LiquidOptions.html#cache){:target="_blank"} peut être définie pour demander à liquidjs d'utiliser des modèles analysés en cache chaque fois que vous appelez [renderFile](https://liquidjs.com/api/classes/Liquid.html#renderFile){:target="_blank"} ou [renderFileSync](https://liquidjs.com/api/classes/Liquid.html#renderFileSync){:target="_blank"}.
 
@@ -569,7 +569,7 @@ L'évasion est importante dans tous les langages, y compris LiquidJS. Alors que 
 - Échappement pour la sortie, c'est-à-dire échappement HTML. Utilisé pour échapper aux caractères spéciaux HTML afin que la sortie ne casse pas les structures HTML, c'est-à-dire HTML sécurisé.
 - S'évader pour la langue elle-même, c'est-à-dire l'évasion liquide. Utilisé pour générer des chaînes considérées comme spéciales en langage Liquid. Cela sera utile lorsque vous rédigerez un article dans le modèle Liquid pour présenter le langage Liquid.
 
-### HTML Escape
+#### HTML Escape
 
 Par défaut, la sortie n'est pas échappée. Bien que vous puissiez utiliser le filtre [escape](https://liquidjs.com/filters/escape.html){:target="_blank"} pour cela :
 
@@ -603,7 +603,7 @@ Sortie :
 <button>OK</button>
 ```
 
-### Liquid Escape
+#### Liquid Escape
 
 Pour désactiver le langage Liquid et les chaînes de sortie telles que `{ {` et `{% raw %}{%{% endraw %}`, la balise [raw](https://liquidjs.com/filters/raw.html){:target="_blank"} peut être utilisée.
 
@@ -637,7 +637,7 @@ Sortie :
 ```
 
 ## Register Filters/Tags
-### Register Tags
+#### Register Tags
 
 ``` js
 // Usage: {% raw %}{%{% endraw %} upper name {% raw %}%}{% endraw %}
@@ -679,7 +679,7 @@ engine.registerTag('upper', class UpperTag extends Tag {
 - Voir les implémentations de balises existantes ici : <https://github.com/harttle/liquidjs/tree/master/src/tags>{:target="_blank"}
 - Voir l'exemple de démonstration ici : <https://github.com/harttle/liquidjs/blob/master/demo/typescript/index.ts>{:target="_blank"}
 
-### Register Filters
+#### Register Filters
 
 ``` js
 // Usage: {% raw %}{{{% endraw %} name | upper {% raw %}}}{% endraw %}
@@ -695,7 +695,7 @@ engine.registerFilter('add', (initial, arg1, arg2) => initial + arg1 + arg2)
 
 Voir les implémentations de filtres existantes ici : <https://github.com/harttle/liquidjs/tree/master/src/filters>{:target="_blank"}
 
-### Unregister Tags/Filters
+#### Unregister Tags/Filters
 
 Dans certains cas, il est souhaitable de désactiver certaines balises/filtres (voir [#324](https://github.com/harttle/liquidjs/issues/324){:target="_blank"}), vous devrez enregistrer une balise/filtre factice dans lequel une erreur correspondante est générée.
 
@@ -745,7 +745,7 @@ Voir ce JSFiddle : <https://jsfiddle.net/ctj364up/1/>{:target="_blank"}
 > **Arrow Functions** : ceci dans les fonctions fléchées est lié au contexte JavaScript actuel, vous devrez utiliser la syntaxe `function(){}` au lieu de la syntaxe `()=>{}` pour accéder correctement à `this.context`.
 
 ## Parse Parameters
-### Access Raw Parameters
+#### Access Raw Parameters
 
 Comme indiqué dans [Register Filters/Tags](https://liquidjs.com/tutorials/register-filters-tags.html){:target="_blank"}, les paramètres de balise sont disponibles sur `tagToken.args` sous forme de chaîne raw. Par exemple:
 
@@ -768,7 +768,7 @@ engine.registerTag('random', {
 
 Voici une version JSFiddle : <https://jsfiddle.net/ctj364up/2/>{:target="_blank"}
 
-### Parse Parameters as Values
+#### Parse Parameters as Values
 
 Parfois, nous avons besoin de balises plus dynamiques et souhaitons transmettre des valeurs à la balise personnalisée au lieu de chaînes statiques. Les variables dans LiquidJS peuvent être littérales (chaîne, nombre, etc.) ou une variable de la portée du contexte actuel.
 
@@ -805,7 +805,7 @@ L'appel de cette balise dans scope `{ bar: "bar", obj: { coo: "coo" } }` donne e
 
 > **Async and Promises** : Les appels asynchrones dans LiquidJS sont implémentés directement par les générateurs, car nous pouvons appeler les générateurs de manière synchrone, donc cette implémentation de balise est également valable pour `renderSync()`, `parseAndRenderSync()`, `renderFileSync()`. Si vous devez attendre une promesse dans l'implémentation de la balise, remplacez simplement `wait somePromise` par `yield somePromise` et gardez `* render()` au lieu de `async render()` fera l'affaire. Voir [Sync et Async](https://liquidjs.com/tutorials/sync-and-async.html){:target="_blank"} pour plus de détails.
 
-### Parse Key-Value Pairs as Named Parameters
+#### Parse Key-Value Pairs as Named Parameters
 
 Les paramètres nommés deviennent très pratiques lorsqu’il y a des paramètres facultatifs ou de nombreux paramètres, auquel cas l’ordre des paramètres n’a pas d’importance. C’est exactement pour cela que la classe Hash a été inventée.
 
@@ -839,7 +839,7 @@ Le rendu de `{% raw %}{%{% endraw %} random from:2, to:max {% raw %}%}{% endraw 
 
 Les balises personnalisées peuvent avoir un modèle de contenu et peuvent être imbriquées. Cet article décrit comment implémenter des balises personnalisées composées d'une balise de début , d'une balise de fin et d'un contenu de modèle entre elles.
 
-### Render Tag Content
+#### Render Tag Content
 
 Nous commencerons avec une balise simple `wrap` qui enveloppe son contenu dans un élément `<div class="wrapper"></div>` :
 
@@ -894,7 +894,7 @@ engine.registerTag('wrap', {
 
 `.renderTemplates()` peut être asynchrone, nous devons `yield` attendre qu'il soit terminé. Pour plus de détails sur `async` dans LiquidJS, veuillez vous référer à [Sync et Async](https://liquidjs.com/tutorials/sync-and-async.html){:target="_blank"}. Les autres parties de `render()` la méthode est assez simples. Voici une version JSFiddle : https://jsfiddle.net/por0zcn1/3/
 
-### Using ParseStream
+#### Using ParseStream
 
 En ce qui concerne les balises complexes comme [for](https://liquidjs.com/tags/for.html){:target="_blank"} et [if](https://liquidjs.com/tags/if.html){:target="_blank"}, cela `parse()` peut être très compliqué. Il existe un utilitaire [ParseStream](https://liquidjs.com/api/classes/ParseStream.html){:target="_blank"} pour organiser les balises `parse()` dans un style basé sur les événements. Voici une version réécrite `parse()` en utilisant `ParseStream` et qui fait exactement la même chose que l'exemple ci-dessus.
 
@@ -912,7 +912,7 @@ parse(tagToken, remainTokens) {
 
 Voici une version JSFiddle : <https://jsfiddle.net/por0zcn1/4/>{:target="_blank"}. Pour plus de simplicité, les exemples suivants sont implémentés à l'aide de `ParseStream`.
 
-### Manipulate the Context
+#### Manipulate the Context
 
 La balise `wrap` ci-dessus ne semble pas très utile, sans utiliser cette balise, nous pouvons de toute façon restituer le contenu. Nous allons maintenant implémenter une balise `repeat` pour restituer le contenu 2 fois (nous pouvons également ajouter un paramètre pour restituer des fois arbitraires).
 
@@ -966,7 +966,7 @@ LiquidJS fournit également un mécanisme similaire à [Shopify Drops](https://g
 
 > **Drop pour JavaScript** : L'interface Drop est implémentée différemment dans LiquidJS par rapport aux filtres intégrés et aux autres fonctionnalités de modèle. Étant donné que LiquidJS s'exécute en JavaScript, les Drops personnalisés doivent de toute façon être réimplémentés en JavaScript. Il n'y a aucune compatibilité entre les classes JavaScript et les classes Ruby.
 
-### Utilisation de base
+#### Utilisation de base
 
 ``` js
 import { Liquid, Drop } from 'liquidjs'
@@ -994,7 +994,7 @@ Comme indiqué ci-dessus, en plus de lire les propriétés à partir des portée
 
 > **Méthodes asynchrones** : LiquidJS est entièrement compatible avec l'asynchronisme. Vous pouvez renvoyer en toute sécurité une promesse dans vos méthodes `Drop` ou définir vos méthodes dans `Drop` comme `async`.
 
-### liquidMethodMissing
+#### liquidMethodMissing
 
 Dans les cas où il n'existe pas d'ensemble fixe de propriétés, vous pouvez utiliser cette fonction `liquidMethodMissing` pour résoudre dynamiquement la valeur d'un nom de variable.
 
@@ -1047,7 +1047,7 @@ const context = { color: new ColorDrop() }
 engine.parseAndRender("{% raw %}{{{% endraw %}color{% raw %}}}{% endraw %}", context).then(html => console.log(html))
 ```
 
-### toLiquid
+#### toLiquid
 
 `toLiquid()` n'est pas une méthode de `Drop`, mais elle peut être utilisée pour renvoyer un Drop. Dans les cas où vous avez une structure fixe dans laquelle `context` vous ne pouvez pas modifier ses valeurs, vous pouvez implémenter `toLiquid()` pour permettre à LiquidJS d'utiliser la valeur renvoyée au lieu de lui-même pour restituer les modèles.
 
@@ -1107,11 +1107,11 @@ engine.parseAndRender("{% raw %}{{{% endraw %}person.name{% raw %}}}{% endraw %}
 > - `valueOf()` est une méthode exclusive à Drops ; alors qu'elle `toLiquid()` peut être utilisée sur n'importe quel objet de portée.
 > - `valueOf()` est appelé lorsque la variable elle-même est sur le point d'être rendue, se remplaçant elle-même ; alors qu'il `toLiquid()` est appelé lorsque ses propriétés sont sur le point d'être lues.
 
-### Special Drops
+#### Special Drops
 
 LiquidJS lui-même implémente plusieurs gouttes intégrées pour faciliter l'écriture de modèles. Cette partie est compatible avec Shopify Liquid, car nous avons besoin que les modèles soient portables.
 
-#### blank
+##### blank
 
 Utile pour vérifier si une variable de chaîne est `false`, `null`, `undefined`, une chaîne vide ou une chaîne contenant uniquement des caractères vides.
 
@@ -1121,7 +1121,7 @@ Utile pour vérifier si une variable de chaîne est `false`, `null`, `undefined`
 {% raw %}{%{% endraw %} endif {% raw %}%}{% endraw %}
 ```
 
-#### empty
+##### empty
 
 Utile pour vérifier si un tableau, une chaîne ou un objet est vide.
 
@@ -1133,7 +1133,7 @@ Utile pour vérifier si un tableau, une chaîne ou un objet est vide.
 
 > `empty` mise en œuvre : Pour les tableaux et les chaînes, LiquidJS vérifie leurs `.length` propriétés. Pour les objets, LiquidJS effectue des appels `Object.keys()` pour vérifier s'ils ont des clés.
 
-#### nil
+##### nil
 
 `nil` Drop est utilisé pour vérifier si une variable n'est pas définie ou définie comme `null` ou `undefined`, essentiellement équivalent à `== null` la vérification JavaScript.
 
@@ -1143,7 +1143,7 @@ Utile pour vérifier si un tableau, une chaîne ou un objet est vide.
 {% raw %}{%{% endraw %} endif {% raw %}%}{% endraw %}
 ```
 
-### Other Drops
+#### Other Drops
 
 Il existe encore plusieurs Drops pour des balises spécifiques, comme `forloop`, `tablerowloop`, `block`, qui sont couverts par les documents de balises respectifs.
 
@@ -1151,7 +1151,7 @@ Il existe encore plusieurs Drops pour des balises spécifiques, comme `forloop`,
 
 LiquidJS prend en charge les évaluations synchrones et asynchrones et peut être utilisé avec les promesses. Pour réutiliser le même ensemble d'implémentations de balises/filtres à la fois en synchronisation et en asynchrone, les balises LiquidJS sont implémentées en tant que générateurs.
 
-### Sync and Async API
+#### Sync and Async API
 
 Toutes les principales méthodes de [Liquid](https://liquidjs.com/api/classes/Liquid.html){:target="_blank"} prennent en charge à la fois la synchronisation et l'asynchronisation. Ces méthodes renvoient des promesses :
 
@@ -1169,7 +1169,7 @@ La version synchrone des méthodes contient un `Sync` suffixe :
 - `parseAndRenderSync()`
 - `evalValueSync()`
 
-### Implement Sync-Compatible Tags
+#### Implement Sync-Compatible Tags
 
 LiquidJS utilise une implémentation asynchrone basée sur un générateur pour prendre en charge à la fois l'asynchrone et la synchronisation dans une seule implémentation de balise. Par exemple, ci-dessous `UpperTag` peut être utilisé à la fois dans `engine.renderSync()` et `engine.render()`.
 
@@ -1197,7 +1197,7 @@ Toutes les balises intégrées sont implémentées de cette manière et peuvent 
 - ne pas directement `return <Promise>`, et
 - n'appelez aucune API qui renvoie une promesse.
 
-### Call APIs that return a Promise
+#### Call APIs that return a Promise
 
 Mais LiquidJS est compatible avec Promise, n'est-ce pas ? Vous pouvez toujours appeler des fonctions basées sur Promise et attendre cette promesse dans les implémentations de balises. Remplacez simplement `await` par `yield`. par exemple, nous appelons `fs.readFile()` qui renvoie un `Promise`:
 
@@ -1213,7 +1213,7 @@ Maintenant que cela `* render()` appelle une API qui renvoie une promesse, elle 
 
 > **Balises non compatibles avec la synchronisation** : Les balises non compatibles avec la synchronisation sont également des balises valides et fonctionneront parfaitement pour les appels d'API asynchrones. Lorsqu'elles sont appelées de manière synchrone, les balises qui renvoient un `Promise` seront rendues sous la forme `[object Promise]`.
 
-### Convert LiquidJS async Generator to Promise
+#### Convert LiquidJS async Generator to Promise
 
 Vous pouvez convertir un générateur en promesse en utilisant [toPromise](https://liquidjs.com/api/functions/toPromise.html){:target="_blank"}, par exemple :
 
@@ -1235,7 +1235,7 @@ engine.registerTag('upper', class UpperTag extends Tag {
 })
 ```
 
-### Async only Tags
+#### Async only Tags
 
 Si votre balise est destinée à être utilisée uniquement de manière asynchrone, elle peut être déclarée ainsi `async render()` afin que vous puissiez l'utiliser `await` directement dans son implémentation :
 
@@ -1261,7 +1261,7 @@ engine.registerTag('upper', class UpperTag extends Tag {
 
 Pour garder le code source propre et indenté, nous ajoutons des espaces à nos modèles. LiquidJS offre des fonctionnalités de contrôle des espaces pour éliminer ces espaces indésirables dans le code HTML de sortie.
 
-### via Markups
+#### via Markups
 
 Par défaut, toutes les balises et lignes de balisage de sortie génèrent un NL (`\n`) et des espaces s'il y a une indentation. Par exemple :
 
@@ -1291,7 +1291,7 @@ harttle
 
 Dans ce cas, il `-{% raw %}%}{% endraw %}` supprime l'espace blanc du côté droit de la `assign` balise.
 
-### via Options
+#### via Options
 
 Alternativement, LiquidJS fournit ces options par moteur pour permettre le contrôle des espaces blancs sans modifier radicalement vos modèles :
 
@@ -1302,7 +1302,7 @@ Alternativement, LiquidJS fournit ces options par moteur pour permettre le contr
 
 [LiquidJS](https://github.com/harttle/liquidjs){:target="_blank"} ne supprimera aucun espace par défaut, c'est-à-dire que toutes les options ci-dessus sont par défaut à false. Pour plus de détails sur ces options, consultez les [options](https://liquidjs.com/api/interfaces/LiquidOptions.html){:target="_blank"}.
 
-### Greedy Mode
+#### Greedy Mode
 
 En mode gourmand (activé par l'[option gourmande](https://liquidjs.com/api/interfaces/LiquidOptions.html#greedy){:target="_blank"}), tous les caractères d'espacement consécutifs (y compris `\n`) seront supprimés. Le mode gourmand est activé par défaut pour être conforme à [Shopify/Liquid](https://github.com/Shopify/liquid){:target="_blank"}.
 
@@ -1310,7 +1310,7 @@ En mode gourmand (activé par l'[option gourmande](https://liquidjs.com/api/inte
 
 Un certain nombre de balises et de filtres peuvent être encapsulés dans un **plugin**, qui sera généralement installé via npm. Cet article fournit des informations sur la création et l'utilisation d'un plugin.
 
-### Écrire un plugin
+#### Écrire un plugin
 
 Un plugin liquidjs est une fonction simple qui prend la [classe Liquid](https://liquidjs.com/api/classes/Liquid.html){:target="_blank"} comme premier paramètre et l'instance Liquid pour `this`. Nous pouvons appeler les API liquidjs `this` pour effectuer certaines modifications, notamment les [register filters and tags](https://liquidjs.com/harttle/liquidjs/wiki/Register-Filters-Tags){:target="_blank"}.
 
@@ -1327,7 +1327,7 @@ module.exports = function (Liquid) {
 }
 ```
 
-### Utiliser un plugin
+#### Utiliser un plugin
 
 Il suffit de transmettre la fonction du plugin dans la `.plugin()` méthode :
 
@@ -1340,7 +1340,7 @@ engine
     .then(console.log)  // outputs "FOO"
 ```
 
-### Liste des plugins
+#### Liste des plugins
 
 Étant donné que cette bibliothèque exclut certaines fonctionnalités disponibles sur la plateforme Shopify mais pas sur le référentiel [Shopify/liquid](https://github.com/Shopify/liquid/){:target="_blank"}, consultez [Différences avec Shopify/liquid](https://liquidjs.com/tutorials/differences.html){:target="_blank"}.
 
@@ -1358,12 +1358,12 @@ Les opérateurs LiquidJS sont très simples et différents. Il existe 2 types d'
 
 Ainsi, les opérateurs numériques ne sont pas pris en charge et vous ne pouvez même pas ajouter deux nombres comme cela `{% raw %}{{{% endraw %}a + b{% raw %}}}{% endraw %}`, à la place nous avons besoin d'un filtre `{% raw %}{{{% endraw %} a | plus: b{% raw %}}}{% endraw %}`. En fait, `+` c'est un nom de variable valide dans LiquidJS.
 
-### Priorité
+#### Priorité
 
 # Opérateurs de comparaison. Toutes les opérations de comparaison ont la même priorité et sont supérieures aux opérateurs logiques.
 # Opérateurs logiques. Tous les opérateurs logiques ont la même priorité.
 
-### Associativité
+#### Associativité
 
 Les opérateurs logiques sont évalués de droite à gauche, voir [la documentation Shopify](https://help.shopify.com/en/themes/liquid/basics/operators#order-of-operations){:target="_blank"}.
 
@@ -1371,7 +1371,7 @@ Les opérateurs logiques sont évalués de droite à gauche, voir [la documentat
 
 Bien que Liquid soit indépendant de la plate-forme, il existe [certaines différences](https://github.com/harttle/liquidjs#differences-and-limitations){:target="_blank"} avec [la version Ruby](https://shopify.github.io/liquid){:target="_blank"}, dont l'une est la `truthy` valeur.
 
-### La table de vérité
+#### La table de vérité
 
 D'après [le document Shopify](https://shopify.github.io/liquid/basics/truthy-and-falsy/){:target="_blank"}, tout ce qui n'est pas `false` et `nil` est vrai. Mais en JavaScript, nous avons un système de types totalement différent, nous avons des types comme `undefined` et nous ne faisons pas de distinction entre `integer` et `float`, donc les choses sont légèrement différentes :
 
@@ -1389,7 +1389,7 @@ D'après [le document Shopify](https://shopify.github.io/liquid/basics/truthy-an
 | array        |     ✔️    |          |
 | empty array  |     ✔️    |          |
 
-### Utilisez JavaScript Truthy
+#### Utilisez JavaScript Truthy
 
 Notez que LiquidJS utilise la vérité de Shopify par défaut. Mais il peut être basculé pour utiliser la vérité JavaScript standard en définissant l' option `jsTruthy` sur `true`.
 
@@ -1411,7 +1411,7 @@ Notez que LiquidJS utilise la vérité de Shopify par défaut. Mais il peut êtr
 
 Lorsque le modèle ou le contexte de données ne sont pas fiables, il est essentiel d'activer les options de prévention DoS. LiquidJS propose 3 options à cet effet : `parseLimit`, `renderLimit`, et `memoryLimit`.
 
-### TL;DR
+#### TL;DR
 
 La définition de ces options peut en grande partie garantir que votre instance LiquidJS ne se bloquera pas pendant des périodes prolongées ou ne consommera pas de mémoire excessive. Ces limites sont basées sur les API JavaScript disponibles, il ne s'agit donc pas de limites strictes précises, mais de seuils permettant d'éviter que votre processus ne tombe en panne ou ne se bloque.
 
@@ -1425,13 +1425,13 @@ const liquid = new Liquid({
 
 Lorsqu'un `parse()` ou `render()` ne peut pas être complété dans le cadre d'une ressource donnée, il est rejeté.
 
-### parseLimit
+#### parseLimit
 
 [parseLimit](https://liquidjs.com/api/interfaces/LiquidOptions.html#parseLimit){:target="_blank"} limite la taille (longueur des caractères) des modèles analysés à chaque `.parse()` appel, y compris les partiels et les mises en page référencés. Étant donné que LiquidJS analyse les chaînes de modèles en un temps proche de O(n), la limitation de la longueur totale du modèle est généralement suffisante.
 
 Un PC typique gère `1e8` (100 M) de caractères sans problème.
 
-### renderLimit
+#### renderLimit
 
 Restreindre la taille du modèle seul n'est pas suffisant car des boucles dynamiques avec un grand nombre peuvent se produire au moment du rendu. [renderLimit](https://liquidjs.com/api/interfaces/LiquidOptions.html#renderLimit){:target="_blank"} atténue ce problème en limitant le temps consommé par chaque `render()` appel.
 
@@ -1445,7 +1445,7 @@ Le temps de rendu est vérifié pour chaque modèle (avant le rendu de chaque mo
 
 Pour les balises et les filtres chronophages au sein d'un seul modèle, le processus peut toujours se bloquer. Pour un rendu entièrement contrôlé, pensez à utiliser un gestionnaire de processus comme [paralleljs](https://www.npmjs.com/package/paralleljs){:target="_blank"}.
 
-### memoryLimit
+#### memoryLimit
 
 Même avec un nombre réduit de modèles et d'itérations, l'utilisation de la mémoire peut augmenter de manière exponentielle. Dans l'exemple suivant, la mémoire double à chaque itération :
 
