Correction docs/_posts/2024-10-19-LiquidJs.md.

--- a/docs/_posts/2024-10-19-LiquidJs.md
+++ b/docs/_posts/2024-10-19-LiquidJs.md
@@ -1360,8 +1360,8 @@ Ainsi, les opérateurs numériques ne sont pas pris en charge et vous ne pouvez 
 
 #### Priorité
 
-# Opérateurs de comparaison. Toutes les opérations de comparaison ont la même priorité et sont supérieures aux opérateurs logiques.
-# Opérateurs logiques. Tous les opérateurs logiques ont la même priorité.
+1. Opérateurs de comparaison. Toutes les opérations de comparaison ont la même priorité et sont supérieures aux opérateurs logiques.
+2. Opérateurs logiques. Tous les opérateurs logiques ont la même priorité.
 
 #### Associativité
 
